# UABA2-AP-project-game

./: .gitignore  CMakeLists.txt  README.md  local.properties
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: CMakeLists.txt  main.cpp
app/src/main/cpp/src/engine/: CMakeLists.txt  Engine.cpp  Engine.h
app/src/main/cpp/src/engine/Stopwatch/: Stopwatch.cpp
app/src/main/cpp/src/engine/constants/: constants.cpp  constants.h
app/src/main/cpp/src/engine/entity/: Entity.h  Transform.h
app/src/main/cpp/src/engine/entity/components/: IComponent.h
app/src/main/cpp/src/engine/entity/components/audio/: IAudioComponent.cpp
app/src/main/cpp/src/engine/entity/components/physics/: HitBox.h  PhysicsComponent.cpp  PhysicsComponent.h
app/src/main/cpp/src/engine/entity/ui/: UIEntity.cpp  UIEntity.h
app/src/main/cpp/src/engine/input/: Input.h
app/src/main/cpp/src/engine/math/: Vector2f.cpp  math_utils.cpp
app/src/main/cpp/src/engine/resources/: resource_info_parser.cpp
app/src/main/cpp/src/engine/state-machine/: PushdownState.h
app/src/main/cpp/src/engine/utils/: FileReadSingleton.h  file_io.cpp  file_io.h  windows_timersleep.cpp
app/src/main/cpp/src/game/: Game.cpp  Game.h
app/src/main/cpp/src/game/config/: config_parser.cpp  config_parser.h
app/src/main/cpp/src/game/constants/: constants.h
app/src/main/cpp/src/game/entities/ui/button/: Button.cpp  Button.h  ButtonState.h
app/src/main/cpp/src/game/entities/world/finish/: Finish.h
app/src/main/cpp/src/game/input/: InputEvent.cpp  InputEvent.h
app/src/main/cpp/src/game/level/: LevelData.h  level_data_parser.cpp
app/src/main/cpp/src/game/state/menu/: LevelFinishOverlayState.h  LevelMenuState.h  MainMenuState.cpp  MainMenuState.h  MenuState.cpp  MenuState.h  PauseOverlayState.cpp
app/src/main/cpp/src/game/state/world/: WorldState.cpp  WorldState.h
app/src/main/cpp/src/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
app/src/main/cpp/src/renderer/components/audio/: AudioComponent.cpp
app/src/main/cpp/src/renderer/components/view/: ViewComponentCreator.cpp  ViewComponentCreator.h
app/src/main/cpp/src/renderer/constants/: constants.h
app/src/main/cpp/src/renderer/input/: InputChecker.cpp  InputChecker.h
app/src/main/cpp/src/renderer/utils/: FileReader.h  utils.h
src/renderer/: CMakeLists.txt  InputMapper.cpp  InputMapper.h  Renderer.cpp  Renderer.h  constants.cpp  constants.h  input_mapping.cpp  input_mapping.h  utils.cpp  utils.h
src/renderer/components/audio/: AudioComponent.cpp  AudioComponent.h  AudioComponentCreator.cpp  AudioComponentCreator.h
src/renderer/components/view/: LineComponent.cpp  RectangleComponent.cpp  RectangleComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextBoxComponent.cpp  TextBoxComponent.h  ViewComponent.cpp  ViewComponent.h  ViewComponentCreator.cpp  ViewComponentCreator.h
src/renderer/components/view/shape/: LineComponent.h  RectangleComponent.cpp  RectangleComponent.h
src/renderer/components/view/sprite/: SpriteComponent.cpp  SpriteComponent.h
src/renderer/components/view/text/: TextBoxComponent.cpp  TextBoxComponent.h
src/renderer/constants/: constants.cpp  constants.h
src/renderer/entity-view/: EntityView.cpp  EntityView.h  EntityViewCreator.cpp  EntityViewCreator.h
src/renderer/input/: InputChecker.cpp  InputChecker.h
src/renderer/resources/: ResourceManager.cpp  ResourceManager.h
(+302 files in other folders)
